--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [MRU]
 MRUItem0=/Game/Maps/MapaBasico02
 MRUItem1=/Game/Maps/MapaBasico
-MRUItem2=/Game/Untitled
+MRUItem2=/Game/Maps/MapaBasico03
+MRUItem3=/Game/Untitled
 
 [DetailCategories]
 WorldSettings.World=True
@@ -274,6 +275,15 @@ BP_VacasNovo_C.PlanarMovement=True
 BP_VacasNovo_C.MovementComponent=True
 BP_VacasNovo_C.Shape=True
 BP_VacasNovo_C.Navigation=True
+Jogador_C.Default=True
+Jogador_C.Tick=True
+Jogador_C.Replication=True
+Arma_C.Tick=True
+Arma_C.Default=True
+Arma_C.Rendering=True
+Arma_C.Replication=True
+Arma_C.Input=True
+Arma_C.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/BP_VacasNovo.BP_VacasNovo;
@@ -308,7 +318,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/BluePrints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -907,5 +917,7 @@ ObjectProperty.Variable=True
 /Game/Vacas_BehaviorTree.Vacas_BehaviorTree=1
 /Game/VacasController.VacasController=1
 /Game/BP_VacasNovo.BP_VacasNovo=1
+/Game/BluePrints/Jogador.Jogador=1
+/Game/BluePrints/Arma.Arma=1
 
 
