--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,41 +38,15 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
-<<<<<<< HEAD
-<<<<<<< HEAD
--ActionMappings=(ActionName="Atirar",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Atirar",Key=Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Atirar",Key=Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Atirar",Key=Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Atirar",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Pegar",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-=======
->>>>>>> parent of d5be51b... a
 +ActionMappings=(ActionName="Atirar",Key=Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=Down,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-<<<<<<< HEAD
-+ActionMappings=(ActionName="Pegar",Key=BackSpace,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--AxisMappings=(AxisName="MoveUp",Key=Gamepad_LeftY,Scale=1.000000)
--AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
--AxisMappings=(AxisName="LookUp",Key=Gamepad_RightY,Scale=-1.000000)
--AxisMappings=(AxisName="LookRight",Key=Gamepad_RightX,Scale=1.000000)
--AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
--AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
--AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
--AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
--AxisMappings=(AxisName="LookUp",Key=Up,Scale=1.000000)
--AxisMappings=(AxisName="LookUp",Key=Down,Scale=-1.000000)
--AxisMappings=(AxisName="LookRight",Key=Left,Scale=-1.000000)
--AxisMappings=(AxisName="LookRight",Key=Right,Scale=1.000000)
-=======
++ActionMappings=(ActionName="Pegar",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
->>>>>>> 709d6a2b15434936b9bf7d722f2d818548b1913a
-=======
->>>>>>> parent of d5be51b... a
++ActionMappings=(ActionName="Pegar",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveUp",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUp",Key=Gamepad_RightY,Scale=-1.000000)
