--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -47,6 +47,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Atirar",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Atirar",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Pegar",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Trocar",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Trocar",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveUp",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUp",Key=Gamepad_RightY,Scale=-1.000000)
