comit de ajuste

--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -10,17 +10,27 @@ NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
-<<<<<<< HEAD
-=======
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
->>>>>>> cf2587861fc6942d6a64a4ee19cf1276081c6757
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
 NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
-NullLayout=( 	"Type": "Layout", 	"Name": "NullLayout", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [] 		) 	] )
+NullLayout=(\
+	"Type": "Layout",\
+	"Name": "NullLayout",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Horizontal",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": []\
+		)\
+	]\
+)
 None=======
 None=======
 None=======
@@ -33,11 +43,10 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< HEAD
-=======
 None=======
 None=======
->>>>>>> cf2587861fc6942d6a64a4ee19cf1276081c6757
+None=======
+None=======
 None=======
 None=======
 None=======
