--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Intermediate/AssetRegistryCache/c90e3f55.bin
 Intermediate/AssetRegistryCache/311563bb.bin
 Intermediate/AssetRegistryCache/c90e3f55.bin
 Intermediate/CachedAssetRegistry.bin
+Content/BluePrints/BP_VacasNovo.uasset
