Comit da animação do alien

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,8 +8,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/BluePrints/ModoDeJogo.ModoDeJogo_C
-EditorStartupMap=/Game/Maps/MapaBasico.MapaBasico
-GameDefaultMap=/Game/Maps/MapaBasico.MapaBasico
+EditorStartupMap=/Game/Maps/MapaBasico03.MapaBasico03
+GameDefaultMap=/Game/Maps/MapaBasico03.MapaBasico03
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
